[package]
name = "clone_or_derive"
version = "0.0.1"
authors = ["Owen Synge <osynge@googlemail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Layer the configuration from multiple sources using a derived CloneOr trait implementation."
keywords = ["config", "clone_or"]


[lib]
name = "clone_or_derive"
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "*"
proc-macro2 = "*"
