[package]
name = "clone_or_test"
version = "0.0.1"
authors = ["Owen Synge <osynge@googlemail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Test layering the configuration from multiple sources using a derived CloneOr trait implementation."
homepage = ""
repository = ""
documentation = ""
keywords = ["config", "clone_or"]
readme = "crates-io.md"
include = ["src/**/*.rs", "crates-io.md", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[lib]
name = "clone_or_test"
proc-macro = true

[dependencies]
clone_or = { path = "../clone_or" }
clone_or_derive = { path = "../clone_or_derive" }
pretty_assertions = "1"
