[package]
name = "clone_with_default"
version = "0.0.1"
authors = ["Owen Synge <osynge@googlemail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Layer the configuration from multiple sources using just the CloneWithDefault trait."
keywords = ["config", "clone_with_default"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "clone_with_default"

[dev-dependencies]
clone_with_default_derive = { path = "../clone_with_default_derive" }