[package]
name = "clone_with_default_derive"
version = "0.0.1"
authors = ["Owen Synge <osynge@googlemail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Layer the configuration from multiple sources using a derived CloneWithDefault trait implementation."
keywords = ["config", "clone_with_default"]


[lib]
name = "clone_with_default_derive"
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "*"
proc-macro2 = "*"
