[package]
name = "config_or_test"
version = "0.0.1"
authors = ["Owen Synge <osynge@googlemail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Test layering the configuration from multiple sources using a derived ConfigOr trait implementation."
homepage = ""
repository = ""
documentation = ""
keywords = ["config", "config_or"]
readme = "crates-io.md"
include = ["src/**/*.rs", "crates-io.md", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[lib]
name = "config_or_test"
proc-macro = true

[dependencies]
config_or = { path = "../config_or" }
config_or_derive = { path = "../config_or_derive" }
pretty_assertions = "1"
