[package]
name = "converge"
version = "0.0.3"
authors = ["Owen Synge <osynge@googlemail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Layer the configuration from multiple sources using just the Converge trait."
keywords = ["config", "converge", "merge", "derive", "configuration"]
repository = "https://github.com/osynge/converge"
categories = ["data-structures", "config"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "converge"

[dependencies]
converge_derive = { version = "0.0.3", path = "../converge_derive" }
