[package]
name = "converge"
version = "0.0.4"
authors = ["Owen Synge <osynge@googlemail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = """Layered configuration, can be expressed in a single
line of code. The `Converge` trait merges instances of structures into a new
instance of a structure. The `Converge` trait can be derived, and when needed
with field attributes for nested structures, or a custom `strategy`."""
keywords = ["config", "converge", "merge", "derive", "configuration"]
repository = "https://github.com/osynge/converge"
categories = ["data-structures", "config"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "converge"

[dependencies]
converge_derive = { version = "0.0.4", path = "../converge_derive" }
