[package]
name = "converge_derive"
version = "0.0.3"
authors = ["Owen Synge <osynge@googlemail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Layer the configuration from multiple sources using a derived Converge trait implementation."
keywords = ["config", "converge", "merge", "derive", "configuration"]
repository = "https://github.com/osynge/converge"
categories = ["data-structures", "config"]
readme = "../README.md"


[lib]
name = "converge_derive"
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0.17"
proc-macro2 = "1.0.36"
