[package]
name = "converge_test"
version = "0.0.1"
authors = ["Owen Synge <osynge@googlemail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Test layering the configuration from multiple sources using a derived Converge trait implementation."
homepage = ""
repository = ""
documentation = ""
keywords = ["config", "converge"]
readme = "crates-io.md"
include = ["src/**/*.rs", "crates-io.md", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[lib]
name = "converge_test"
proc-macro = true

[dependencies]
converge = { path = "../converge" }
converge_derive = { path = "../converge_derive" }
pretty_assertions = "1"
