[package]
name = "converge_example_concise"
version = "0.0.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_assertions = "1"

# [derive(x)] macros for errors
thiserror = "1.0.31"

# Layered configuration.
converge = { version = "0.0.4", path = "../../converge" }

# Env configuration.
envy = "0.4.2"

# cli configuration.
clap = { version = "*", features = ["derive"] }

# toml configuration
toml = "0.5"
serde = { version = "1.0.137", features = ["derive"] }
