[package]
name = "converge_example_concise"
version = "0.0.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_assertions = "1"

# [derive(x)] macros for errors
thiserror = "2.0.12"

# Layered configuration.
converge = { version = "0.0.5", path = "../../converge" }

# Env configuration.
envy = "0.4.2"

# cli configuration.
clap = { version = "*", features = ["derive"] }

# toml configuration
toml = "0.8.20"
serde = { version = "1.0.137", features = ["derive"] }
